assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap");

/*Generic*/

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}


/*Body section*/

body {
    display: grid;
    grid-template-rows: 0.1fr 2fr 0.1fr;
    height: 100vh;
    font-family: "Happy Monkey", cursive;
    font-weight: 300;
    background: rgb(153, 215, 75);
    background: linear-gradient( 90deg, rgba(153, 215, 75, 1) 0%, rgba(195, 228, 152, 1) 50%, rgba(153, 215, 75, 1) 100%);
}

.game-container {
    height: 100%;
    width: 100%;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 0.1fr 2fr 0.1fr;
}


/*Overlay section*/

.hide-overlay {
    display: none;
}

.show-overlay {
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 2;
}

#start-game-container {
    background-color: rgb(153, 215, 75, 0.9);
    height: 28rem;
    width: 60rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    margin: 20px;
    padding: 1rem;
    line-height: 2rem;
    border-radius: 10px;
    font-weight: 600;
}

#instructions h3 {
    text-align: center;
    padding-bottom: 0.5rem;
    color: #442ec0;
}

#instructions p {
    color: #442ec0;
}

.game-stats-overlay {
    color: #442ec0;
    font-size: 1rem;
    font-weight: 600;
}


/*Start button section*/


/*code for button adapted from:
https://webdeasy.de/en/top-css-buttons-en/*/

#game-controller {
    margin-top: 0rem;
    cursor: pointer;
    min-width: 200px;
    min-height: 50px;
    font-family: inherit;
    font-size: large;
    text-transform: uppercase;
    letter-spacing: 1.3px;
    font-weight: 700;
    color: #313133;
    background: #4fd1c5;
    background: linear-gradient( 90deg, rgba(129, 230, 217, 1) 0%, rgba(79, 209, 197, 1) 100%);
    border: none;
    border-radius: 1000px;
    box-shadow: 8px 8px 16px rgba(79, 209, 197, 0.64);
    transition: all 0.3s ease-in-out 0s;
    cursor: pointer;
    outline: none;
    position: relative;
    padding: 10px;
}

#game-controller::before {
    content: "";
    border-radius: 500px;
    min-width: calc(200px + 12px);
    min-height: calc(50px + 12px);
    border: 6px solid #2881aa;
    box-shadow: 0 0 60px rgba(40, 179, 151, 0.64);
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 0;
    transition: all 0.3s ease-in-out 0s;
}

#game-controller:hover,
#game-controller:focus {
    color: #313133;
    transform: translateY(-6px);
}

#game-controller:hover::before,
#game-controller:focus::before {
    opacity: 1;
}

#game-controller::after {
    content: "";
    width: 20px;
    height: 20px;
    border-radius: 100%;
    border: 2px solid #00ffcb;
    position: absolute;
    z-index: 2;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    animation: ring 2.5s infinite;
}

#game-controller:hover::after,
#game-controller:focus::after {
    animation: none;
    display: none;
}

@keyframes ring {
    0% {
        width: 30px;
        height: 30px;
        opacity: 1;
    }
    100% {
        width: 300px;
        height: 300px;
        opacity: 0;
    }
}


/*Header section*/

h1 {
    color: #442ec0;
    text-align: center;
    padding: 10px;
}


/*Timer, flips, music control and score stats section*/

.game-info-container,
.game-stats-container {
    display: flex;
    justify-content: center;
    justify-items: center;
    padding: 10px;
}

#time-remaining {
    width: 30px;
}

.game-info,
.game-stats {
    padding: 0 30px;
    color: #442ec0;
    font-weight: 600;
    display: flex;
}


/*Music button section*/

#btn {
    color: #002b43;
    height: 18px;
    width: 40px;
    border-radius: 5px;
    font-size: 0.8rem;
    margin-left: 5px;
    padding-bottom: 2px;
    cursor: pointer;
    font-family: inherit;
    color: #442ec0;
    font-weight: 600;
}

.on {
    background-color: lightgreen;
}

.off {
    background-color: salmon;
}


/*Game section*/


/*code for card flip adapted from:
https://www.youtube.com/watch?v=ZniVgo8U7ek*/

.memory-game {
    perspective: 1000px;
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-gap: 10px 0;
    justify-items: center;
    justify-content: center;
}

.memory-card {
    height: 100%;
    width: 75%;
    transform: scale(1);
    transform-style: preserve-3d;
    transition: transform 0.5s;
    cursor: pointer;
}

.memory-card:active {
    transform: scale(0.97);
    transition: transform 0.2s;
}

.memory-card.flip {
    transform: rotateY(180deg);
}

.front-face,
.back-face {
    width: 100%;
    height: 100%;
    padding: 1px;
    position: absolute;
    border-radius: 5px;
    background: #7a7a63;
    backface-visibility: hidden;
    box-shadow: 1px 1px 1px rgba(245, 243, 243, 0.6);
}

.front-face {
    transform: rotateY(180deg);
}


/*Footer section*/

footer {
    text-align: center;
    color: #442ec0;
}

footer a {
    text-decoration: none;
    color: #442ec0;
}


/*Responsive design section*/

@media (min-width: 2000px) {
    .game-info,
    .game-stats,
    #instructions h3 {
        font-size: 1.7rem;
    }
    #btn {
        height: 30px;
        width: 60px;
        font-size: 1.4rem;
    }
}

@media (max-width: 700px) {
    #start-game-container {
        margin-right: 1rem;
        margin-left: 1rem;
        line-height: 1rem;
        font-weight: 500;
    }
}

@media (max-width: 470px) {
    .game-info,
    .game-stats,
    footer p {
        font-size: 0.7em;
    }
    #btn {
        height: 14px;
        width: 30px;
        font-size: 0.55rem;
    }
    h1 {
        font-size: 1.5em;
    }
}

@media (max-width: 400px) {
    #start-game-container {
        font-size: 0.8rem;
    }
}

